# s3-upload

./: .gitignore  LICENSE  README.md  aws_creds.sh  pyproject.toml  todo.md  upload.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/: dependabot.yml
s3_upload/: s3.py  upload.py
tests/: test_helpers.py  test_s3.py  test_upload.py
