[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
[tool.poetry]
name = "s3-upload"
version = "0.1.0"
description = "s3-upload takes a folder, hashes the internal files & uploads to S3"
authors = ["JLCodeSource <JLCodeSource@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiobotocore = "^2.7.0"
types-aiobotocore = "^2.7.0"
types-aiobotocore-s3 = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
mypy-boto3-s3 = "^1.33.2"
aioboto3 = "^12.0.0"
types-aiobotocore-s3 = "^2.7.0"
typing-extensions = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
